--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "chart.js": "^3.7.1",
     "moment": "^2.29.2",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-moment": "^1.1.1",
     "react-moment": "^1.1.2",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.4"
