--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.7.1",
+    "html-react-parser": "^1.4.12",
     "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
