--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-moment": "^1.1.2",
     "react-outside-click-handler": "^1.3.0",
     "react-scripts": "^5.0.0",
+    "serve": "^13.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
